[Win] REGRESSION(r215486): Windows Release build is broken https://bugs.webkit.org/show_bug.cgi?id=171024 <rdar://problem/31722618>

Reviewed by Mark Lam.

Windows WebKit refers to a handful of JSC methods that are always
inline. We need to include 'HeapInlines.h' to get the implementation
of these methods.

* Plugins/PluginPackage.cpp:
* WebFrame.cpp:
* WebView.cpp:


Canonical link: https://commits.webkit.org/187956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215551 268f45cc-cd09-0410-ab3c-d52691b4dbfc